--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="DANFORTH Auto Parts"
-      content="We provide the best auto parts in Toronto to our customers that are high in quality, low in price, and trusted."
-    />
+    <meta name="keywords" content="car parts, tools and equipment, brakes, oil, engine, auto parts online, auto parts, auto store, car accessories, car service, vehicle, car products, car battery, car tools">
+    <meta name="description" content="We provide the best auto parts in Toronto to our customers that are high in quality, low in price, and trusted. Shop online for original OEM &amp; replacement auto parts.">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>DANFORTH Auto Parts</title>
+    <title>DANFORTH Auto Parts - Buy Car &amp; Truck Parts Online | Auto Supply Stores Near Me | Cheapest Auto Parts Toronto</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
